# hoiHorse

./: README.md
rouJiClient/: CMakeLists.txt  main.cpp
rouJiClient/common/log/: localLog.cpp
rouJiClient/common/staticValues/: localStaticValues.h
rouJiClient/common/status/: localStatus.cpp
rouJiClient/service/: parseCommands.cpp  parseCommands.h
server/: CMakeLists.txt  main.cpp
server/common/log/: localLog.h
server/common/staticValues/: localStaticValues.h
server/common/status/: localStatus.h
